@@ -145,6 +145,11 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
         parameters.appendJvmArgs("-Xms128m -Xmx192m");
         // parameters.appendJvmArgs("-XX:+PrintGCDetails");
         break;
+      case AppServerInfo.WEBSPHERE:
+        parameters.appendSysProp("javax.management.builder.initial", "");
+        parameters.appendJvmArgs("-XX:MaxPermSize=128m");
+        parameters.appendJvmArgs("-Xms128m -Xmx192m");
+        break;        
     }
 
     if (Os.isUnix() && new File("/dev/urandom").exists()) {
@@ -188,8 +193,7 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
 
     if (ENABLE_DEBUGGER) {
       int debugPort = 8000 + serverId;
-      parameters.appendJvmArgs("-Xdebug");
-      parameters.appendJvmArgs("-Xrunjdwp:server=y,transport=dt_socket,address=" + debugPort + ",suspend=y");
+      parameters.appendJvmArgs("-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=" + debugPort + " -Djava.compiler=NONE");
       parameters.appendSysProp("aspectwerkz.transform.verbose", true);
       parameters.appendSysProp("aspectwerkz.transform.details", true);
       Banner.warnBanner("Waiting for debugger to connect on port " + debugPort);
